--- a/expo-example/package.json
+++ b/expo-example/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.29.0",
     "react-native-reanimated": "4.1.3",
+    "react-native-worklets": "0.5.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-web": "^0.21.2"
   },
