--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "prepare": "npm run build",
     "docs": "typedoc --plugin typedoc-plugin-markdown --out docs ./index.tsx",
     "watch": "yarn tsc --watch"
   },
